avec ajax et sans ajax

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
 	</form>
 	<script src="node_modules/jquery/dist/jquery.js"></script>	
 	<script src="node_modules/semantic-ui/dist/semantic.js"></script>
-<!-- 	<script src="app.js"></script>
- --></body>
+	<script src="app.js"></script>
+	
+</body>
 </html>
